# cmake-rpath-link-example

./: CMakeLists.txt  a.cpp  b.cpp  main.cpp  toolchain.cmake  trigger.sh
